--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -19,7 +19,7 @@ main .hero h1 {
   margin-right: auto;
   position: relative;
   display: flex;
-  font-size: .5em;
+  font-size: 0.5em;
   font-weight: 600;
   text-transform: uppercase;
   color: #fff;
